force-app/main/default/objects/FeedbackItem__c/FeedbackItem__c.object-meta.xml
<CustomObject>
    <label>Feedback Item</label>
    <nameField>
        <label>Feedback Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feedback Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>