force-app/main/default/objects/FeedbackItem__c/fields/FeedbackTemplate__c.field-meta.xml
<CustomField>
    <fullName>FeedbackTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feedback Template</label>
    <referenceTo>FeedbackTemplate__c</referenceTo>
    <relationshipLabel>Feedback Items</relationshipLabel>
    <relationshipName>Feedback_Items</relationshipName>
    <type>Lookup</type>
</CustomField>