force-app/main/default/objects/FeedbackItem__c/fields/Interview__c.field-meta.xml
<CustomField>
    <fullName>Interview__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interview</label>
    <referenceTo>Interview__c</referenceTo>
    <relationshipLabel>Feedback Items</relationshipLabel>
    <relationshipName>Feedback_Items</relationshipName>
    <type>Lookup</type>
</CustomField>