force-app/main/default/objects/FeedbackItem__c/fields/is_Template__c.field-meta.xml
<CustomField>
    <fullName>Is_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Template</label>
    <type>Checkbox</type>
</CustomField>