force-app/main/default/objects/FeedbackItem__c/fields/Proficiency_Level__c.field-meta.xml
<CustomField>
    <fullName>Proficiency_Level__c</fullName>
    <label>Proficiency Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Proficiency_Level</valueSetName>
    </valueSet>
</CustomField>