force-app/main/default/objects/FeedbackItem__c/fields/Questionaire__c.field-meta.xml
<CustomField>
    <fullName>Questionaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Questionaire</label>
    <referenceTo>Questionaire__c</referenceTo>
    <relationshipLabel>Feedback Items</relationshipLabel>
    <relationshipName>Feedback_Items</relationshipName>
    <type>Lookup</type>
</CustomField>